1998-09-18  Michael C. Povel  <Michael.Povel@hub.de>

	* changer-src/chg-scsi.c (wait_ready): new function; keeps retrying
	until success or timeout
	(ask_clean, main): use it

1998-09-18  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* client-src/rundump.c: fix support for VDUMP-only installation
	* client-src/selfcheck.c (check_options): fix VDUMP auto-detection
	* client-src/sendsize.c (getsize_dump): ditto
	* client-src/sendbackup-dump.c (start_backup): ditto
	Reported by Tim Perkins <Tim.Perkins@ddg.phar.cam.ac.uk>
	
1998-09-16  John R. Jackson  <jrj@purdue.edu>

	* man/amadmin.8.in: document that "hostname" is optional for "info".
	Reported by David Wolfskill <dhw@whistle.com>.

1998-09-15  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/FAQ: common compile-time and link-time errors

1998-09-11  John R. Jackson  <jrj@purdue.edu>

	* server-src/tapefile.c (lookup_last_reusable_tape): use new
	calling sequence that passes how old a tape to return.  Remove
	lookup_previous_reusable_tape().
	* server-src/tapefile.h (lookup_last_reusable_tape): use new
	calling sequence that passes how old a tape to return.  Remove
	lookup_previous_reusable_tape().
	* server-src/amadmin.c (tape): use new lookup_last_reusable_tape
	calling sequence.
	* server-src/amcheck.c (taper_scan, start_server_check): use new
	lookup_last_reusable_tape calling sequence.
	* server-src/amflush.c (confirm): use new lookup_last_reusable_tape
	calling sequence.
	* server-src/amtape.c (taper_scan): use new lookup_last_reusable_tape
	calling sequence.
	* server-src/reporter.c (output_tapeinfo): use new
	lookup_last_reusable_tape calling sequence.
	* server-src/taper.c (taper_scan): use new lookup_last_reusable_tape
	calling sequence.

1998-09-11  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* client-src/sendbackup-gnutar.c (re_table): ignore
	`load_client_codepage' message from SAMBA

1998-09-11  John R. Jackson  <jrj@purdue.edu>

	* server-src/amstatus.pl.in (all): fix USE_VERSION_SUFFIXES=yes